# fastapi-microservices

./: Dockerfile  Makefile  pyproject.toml
fastapi_microservices/: main.py
fastapi_microservices/ch1/: main.py
fastapi_microservices/ch2/: main.py
fastapi_microservices/ch2/places/: destination.py
fastapi_microservices/ch2/routes/login/: user.py
